Lower-case hex colors.

--- a/www/admin/styles/promo-promotion-details.css
+++ b/www/admin/styles/promo-promotion-details.css
@@ -21,7 +21,7 @@
 }
 
 #promotion_code_summary .swat-disclosure-container {
-	background: #ECEFF1;
+	background: #eceff1;
 	box-shadow: 0 0 2px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
 	border: 0;
 }
