--- a/www/admin/styles/promo-promotion-index.css
+++ b/www/admin/styles/promo-promotion-index.css
@@ -6,6 +6,6 @@
 .has-notes .admin-notes {
 	display: block;
 	color: rgba(0,0,0,0.54);
-	background: #FFF9C4;
+	background: #fff9c4;
 	padding: 4px 6px;
 }
