--- a/www/admin/styles/promo-admin-notices.css
+++ b/www/admin/styles/promo-admin-notices.css
@@ -1,13 +1,17 @@
 .swat-frame .swat-frame-contents .admin-note,
 .swat-frame .swat-frame-contents .swat-message-display {
-	margin: 0 0 16px;
+  margin: 0 0 16px;
 }
 
 .swat-frame .swat-frame-contents .swat-message-display .swat-message {
-	margin-top: 0;
+  margin-top: 0;
 }
 
 .swat-frame .swat-frame-contents .admin-note .admin-note-title,
-.swat-frame .swat-frame-contents .swat-message-display .swat-message .swat-message-primary-content {
-	font-size: 100%;
+.swat-frame
+  .swat-frame-contents
+  .swat-message-display
+  .swat-message
+  .swat-message-primary-content {
+  font-size: 100%;
 }
